<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="short_video">Short Video</string>
    <string name="short_video_title">Short Video</string>
    <string name="short_video_desc">Watch trending videos</string>
    <string name="short_video_empty">No videos available</string>
    <string name="share">Share</string>
    <string name="author_prefix">@%s</string>
    <string name="default_time">00:00</string>
    <string name="like_count">0</string>
    <string name="comment_count">0</string>
    <string name="share_desc">Share video</string>
    <string name="comment_desc">View comments</string>
    <string name="like_desc">Like video</string>
    <string name="play_icon_desc">Play video</string>
    <string name="settings">Settings</string>
    <string name="tab_photos">Photos</string>
    <string name="search_photos">Search photos</string>
    <string name="tab_videos">Videos</string>
    <string name="no_photos">No photos available</string>
    <string name="no_videos">No videos available</string>
    <string name="photo_desc">Photo</string>
    <string name="video_thumbnail_desc">Video thumbnail</string>
    <string name="play_video_desc">Play video</string>
    <string name="search">Search</string>
    <string name="search_photos_hint">Search photos</string>
    <string name="search_photos_empty">No search results</string>
    <string name="search_photos_tip">Search for photos</string>
    <string name="back_desc">Back</string>
    <string name="clear_desc">Clear</string>
    <string name="filter_orientation">Orientation</string>
    <string name="filter_orientation_all">All</string>
    <string name="filter_orientation_landscape">Landscape</string>
    <string name="filter_orientation_portrait">Portrait</string>
    <string name="filter_orientation_square">Square</string>
    <string name="filter_size">Size</string>
    <string name="filter_size_all">All</string>
    <string name="filter_size_large">Large</string>
    <string name="filter_size_medium">Medium</string>
    <string name="filter_size_small">Small</string>
    <string name="filter_color">Color</string>
    <string name="filter_color_all">All</string>
    <string name="filter_color_black">Black</string>
    <string name="filter_color_black_white">Black &amp; White</string>
    <string name="filter_color_red">Red</string>
    <string name="filter_color_orange">Orange</string>
    <string name="filter_color_yellow">Yellow</string>
    <string name="filter_color_green">Green</string>
    <string name="filter_color_turquoise">Turquoise</string>
    <string name="filter_color_blue">Blue</string>
    <string name="filter_color_violet">Violet</string>
    <string name="filter_color_pink">Pink</string>
    <string name="filter_color_brown">Brown</string>
    <string name="menu_desc">Menu</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="fragment_not_found">Fragment not found</string>
    <string name="unmute_desc">Unmute</string>
    <string name="mute_desc">Mute</string>
</resources>